商品リンクから家具を補完し写真付きで配置を編集できるようにする
