# backend/config/routes.rb
@@ -28,6 +28,7 @@ Rails.application.routes.draw do
       get "assets/*key", to: "assets#show", format: false
 
       resources :furniture_models, only: %i[index show]
+      resources :furniture_imports, only: :create
       resources :rooms, only: %i[create show] do
         resources :coordinations, only: :create
       end
